# mnemo

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  mnemo.example.toml
crates/mnemo-api/: Cargo.toml
crates/mnemo-api/src/: main.rs  tests.rs
crates/mnemo-bench/: Cargo.toml
crates/mnemo-bench/src/: main.rs
crates/mnemo-cli/: Cargo.toml
crates/mnemo-cli/src/: main.rs
crates/mnemo-core/: Cargo.toml
crates/mnemo-core/migrations/: 001_entities.sql  002_relations.sql  003_chunks.sql  004_chunk_entities.sql
crates/mnemo-core/src/: db.rs  error.rs  extractor.rs  graph.rs  lib.rs  models.rs  provider.rs  retrieval.rs
docs/: api.md  architecture.md
examples/: basic_usage.py
sdk/python/: .gitignore  README.md  pyproject.toml
sdk/python/examples/: demo.ipynb
sdk/python/mnemo/: __init__.py  async_client.py  client.py  exceptions.py  models.py
sdk/python/tests/: test_async_client.py  test_client.py  test_models.py
