[workspace]
members = [
    "crates/mnemo-core",
    "crates/mnemo-api",
    "crates/mnemo-cli",
    "crates/mnemo-bench",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
petgraph = "0.6"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio-test = "0.4"
tempfile = "3.10"
toml = "0.8"
proptest = "1.4"
wiremock = "0.6"
