[package]
name = "mnemo-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mnemo-api"
path = "src/main.rs"

[dependencies]
mnemo-core = { path = "../mnemo-core" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
