[package]
name = "mnemo-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mnemo-cli"
path = "src/main.rs"

[dependencies]
mnemo-core = { path = "../mnemo-core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
# Direct dep — needs "blocking" feature which the workspace entry does not enable
reqwest = { version = "0.12", features = ["blocking", "json"] }
colored = "2.1"
indicatif = "0.17"
prettytable-rs = "0.10"
