[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemo-sdk"
version = "0.1.0"
description = "Python SDK for mnemo — local-first AI memory layer"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "requests>=2.31.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "requests-mock>=1.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
